<resources>
  <string name="app_name">Told Calculator</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="action_settings">Settings</string>
  <string name="select_profile">Select Profile:</string>
  <string name="enter_airport">Enter Airport:</string>
  <string name="airport_text">KABQ</string>
  <string name="next">Next</string>
  <string name="weight_data">Weight Data</string>
  <string name="bew_label">BEW</string>
  <string name="fuel_label">Fuel</string>
  <string name="pax_label">PAX</string>
  <string name="bags_label">Bags</string>
  <string name="total_label">Total</string>
  <string name="takeoff_data_label">Takeoff data</string>
  <string name="runway_required_label">Runway required</string>
  <string name="takeoff_n1_label">Takeoff N1</string>
  <string name="v1">V1</string>
  <string name="save">Save</string>
  <string name="v2">V2</string>
  <string name="vr">VR</string>
  <string name="aircraft_label">Aircraft</string>
  <string name="get_numbers">Get Numbers</string>
  <string name="weather_label">Weather</string>
  <string name="airport_string">%1$s - Elevation: %2$d</string>
  <string name="aircraft_string">%1$s - Weight: %2$d</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="default_airport_label">Default Airport</string>
  <string name="default_aircraft_label">Default Aircraft</string>
  <string name="new_flight">New Flight</string>
  <string name="weather">Weather</string>
  <string name="saved_told_data">Saved TOLD Data</string>
  <string name="user_id_key">USER_NAME</string>
  <string name="airport_ident_key">ICAO_IDENT</string>
  <string name="aircraft_name_key">AIRCRAFT_NAME</string>
  <string name="aircraft_weight_key">AIRCRAFT_WT</string>
  <string name="saved_id_key">SAVED_ID</string>
</resources>
