<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context="com.toldcalculator.android.tc.controller.PerformanceFragment">

  <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:gravity="center_horizontal"
      android:layout_weight="1">

      <TextView
        android:id="@+id/takeoff_data_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/takeoff_data_label"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingBottom="24dp"/>

      <TextView
        android:id="@+id/runway_required_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/takeoff_data_label"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/runway_required_label"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="18sp"/>

      <TextView
        android:id="@+id/runway_required_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignBaseline="@id/runway_required_label"
        android:layout_toEndOf="@id/runway_required_label"/>

      <TextView
        android:id="@+id/takeoff_n1_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/runway_required_label"
        android:layout_alignEnd="@id/runway_required_label"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/takeoff_n1_label"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="18sp"/>

      <TextView
        android:id="@+id/takeoff_n1_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignBaseline="@id/takeoff_n1_label"
        android:layout_toEndOf="@id/runway_required_label"/>

      <TextView
        android:id="@+id/takeoff_v1_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/takeoff_n1_label"
        android:layout_alignEnd="@id/runway_required_label"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/v1"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="18sp"/>

      <TextView
        android:id="@+id/takeoff_v1_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignBaseline="@id/takeoff_v1_label"
        android:layout_toEndOf="@id/runway_required_label"/>

      <TextView
        android:id="@+id/takeoff_vr_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/takeoff_v1_label"
        android:layout_alignEnd="@id/runway_required_label"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/vr"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="18sp"/>

      <TextView
        android:id="@+id/takeoff_vr_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignBaseline="@id/takeoff_vr_label"
        android:layout_toEndOf="@id/runway_required_label"/>

      <TextView
        android:id="@+id/takeoff_v2_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/takeoff_vr_label"
        android:layout_alignEnd="@id/runway_required_label"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/v2"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="18sp"/>

      <TextView
        android:id="@+id/takeoff_v2_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignBaseline="@id/takeoff_v2_label"
        android:layout_toEndOf="@id/runway_required_label"/>

      <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/takeoff_v2_text"
        android:layout_alignEnd="@id/takeoff_v2_text"
        android:text="Get Numbers"/>

    </RelativeLayout>
  </LinearLayout>

  <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        android:id="@+id/aircraft_info_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Aircraft data"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingBottom="4dp"/>

      <TextView
        android:id="@+id/aircraft_info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        android:id="@+id/weather_data_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Weather data"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingBottom="4dp"/>

      <TextView
        android:id="@+id/weather_data_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <TextView
        android:id="@+id/airport_data_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingBottom="4dp"/>

      <ListView
        android:id="@+id/runway_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      </ListView>

    </LinearLayout>
  </LinearLayout>
</LinearLayout>
